<resources>
    <string name="app_name">Monei Bros</string>
    <string name="title_activity_principal">PrincipalActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="crie_sua_conta_gr_tis">Crie sua conta grátis</string>
    <string name="nome">Nome</string>
    <string name="email">Email</string>
    <string name="senha">Senha</string>
    <string name="cadastrar">Cadastrar</string>
    <string name="entrar">entrar</string>
    <string name="acesse_sua_conta">Acesse sua conta</string>
    <string name="Loginemail">Email</string>
    <string name="Loginsenha">Senha</string>
    <string name="Loginentrar">entrar</string>
    <string name="crie_uma_conta_gr_tis">Crie uma conta grátis</string>
    <string name="comece_agora_a_economizar">Comece agora a economizar</string>
    <string name="cadastrar_se">Cadastrar-se</string>
    <string name="j_tenho_conta">Já tenho conta</string>
</resources>